Getting started section in readme, query tweaks. Needs further work